force-app/main/default/objects/Archiving_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Fields_to_query__c</fullName>
        <description>Sets the fields to query for a certain object that needs archiving/purging</description>
        <label>Fields to query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria_Long__c</fullName>
        <description>Specifies the condition of the SOQL query that will be formed</description>
        <label>Filter Criteria Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_criteria__c</fullName>
        <description>Sets the where clause of the sObject that needs to have their records archived/purged</description>
        <label>Filter criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will turn on/off sobjects that needs to use the Archiving functionality</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_years_to_archive__c</fullName>
        <description>Sets the number of years to archive the record</description>
        <label>No of years to archive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_years_to_purge__c</fullName>
        <description>Sets the number of years to purge a standard enquiry</description>
        <label>No of years to purge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The name of the sObject that we want to include in the archive</description>
        <label>Object Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Identifies the record type of the Enquiry to be archived/purged</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Identifies the status of the record that will be purged/archived</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Archiving Setting</label>
    <listViews>
        <fullName>Summary</fullName>
        <columns>Object_Name__c</columns>
        <columns>Record_Type__c</columns>
        <columns>No_of_years_to_archive__c</columns>
        <columns>No_of_years_to_purge__c</columns>
        <columns>Status__c</columns>
        <columns>Fields_to_query__c</columns>
        <columns>Filter_Criteria_Long__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Summary</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Archiving Settings</pluralLabel>
</CustomObject>